tests/com.e1c.dt.check.form.itests/workspace/InvalidItemIdCheck/src/Catalogs/Catalog/Forms/BadMerge/Attributes/List/ExtInfo/ListSettings.dcss
<?xml version="1.0" encoding="UTF-8"?>
<Settings xmlns="http://v8.1c.ru/8.1/data-composition-system/settings" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:v8="http://v8.1c.ru/8.1/data/core" xmlns:v8ui="http://v8.1c.ru/8.1/data/ui" xmlns:style="http://v8.1c.ru/8.1/data/ui/style" xmlns:sys="http://v8.1c.ru/8.1/data/ui/fonts/system" xmlns:web="http://v8.1c.ru/8.1/data/ui/colors/web" xmlns:win="http://v8.1c.ru/8.1/data/ui/colors/windows" xmlns:dcscor="http://v8.1c.ru/8.1/data-composition-system/core">
	<filter>
		<viewMode>Normal</viewMode>
		<userSettingID>64ebb8e8-371c-49da-8a6c-a41b66d95d09</userSettingID>
	</filter>
	<order>
		<viewMode>Normal</viewMode>
		<userSettingID>5326979f-5344-4b43-bf79-581fc8aacf47</userSettingID>
	</order>
	<conditionalAppearance>
		<viewMode>Normal</viewMode>
		<userSettingID>88adf09f-d919-4463-851e-e58aa84fba07</userSettingID>
	</conditionalAppearance>
	<itemsViewMode>Normal</itemsViewMode>
	<itemsUserSettingID>8d5349c9-832b-4b02-ad57-c0ba163a9338</itemsUserSettingID>
</Settings>
